# data-lake-ingestion

./: README.md
data_pipeline/: .gitignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml  requests.http  users.xml
data_pipeline/data_pipeline/: clickhouse_client.py  data_ingestion.py  data_processing.py  minio_client.py
data_pipeline/tests/: test_minio_client.py
src/: .env  .gitignore  app.py  filebeat.yml  pyproject.toml
src/controllers/: pokemon_controller.py
src/data_pipeline/: data_processing.py  minio_client.py
src/middleware/: logging_middleware.py
src/sql/: create_view.sql  init_db.sql
src/streamlit_app/: app.py
src/streamlit_app/utils/: db.py
src/tests/: test_clickhouse_client.py  test_data_ingestion.py  test_data_processing.py
src/utils/: files.py  folders.py
